--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Min Hemsida</p>
-        <img src="favicon.jpeg" alt="Doggi" class="services-img">
+        <p>&copy; 2023 Albin Holmqivst
+
+        </p>
     </footer>
 </body>
 </html>
