--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="hemsida.css">
     <link rel="icon" type="image/png" href="favicon.png">
-    <title>Min Hemsida</title>
+    <title>Index</title>
 </head>
 <body>
     <header>
