--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Hem</a></li>
-                <li><a href="hemsida.html">Tjänster</a></li>
+                <li><a href="services.html">Tjänster</a></li>
                 <li><a href="om.html">Om</a></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
