--- a/services.html
+++ b/services.html
@@ -2,6 +2,17 @@
 <html lang="sv">
     <link rel="stylesheet" href="hemsida.css">
     <head>
+        <body>
+            <header>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Hem</a></li>
+                        <li><a href="services.html">Tjänster</a></li>
+                        <li><a href="om.html">Om</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </body>
         <title>Order Search</title>
         <style>
             /* Stil för sökrutan */
