--- a/services.html
+++ b/services.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="sv">
-    <link rel="stylesheet" href="hemsida.css">
+<html5 lang="sv">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="hemsida.css">
+        <link rel="icon" type="image/png" href="favicon.png">
         <body>
             <header>
                 <nav>
@@ -34,4 +37,4 @@
     
         <script src="hemsida.js"></script>
     </body>
-</html>
+</html5>
