--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
      
         <a href="services.html" class="btn">Våra Tjänster</a>
+        <a href="om.html" class="btn">Om</a>
+        <a href="index.html" class="btn">Hem</a>
     </main>
 
     <footer>
