--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="hemsida.css">
     <link rel="icon" type="image/png" href="favicon.png">
     <title>Index</title>
+    <a href="https://www.dinwebbplats.com">
+        <img src="favicon.png" alt="Din Logga">
+    </a>
 </head>
 <body>
     <header>
@@ -36,9 +39,8 @@
 <div id="csvData"></div>
 
 <script src="hemsida.js"></script>
-
-     
-        <a href="services.html" class="btn">Våra Tjänster</a>
+  
+<a href="services.html" class="btn">Våra Tjänster</a>
         <a href="om.html" class="btn">Om</a>
         <a href="index.html" class="btn">Hem</a>
     </main>
