--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
     <link rel="stylesheet" href="hemsida.css">
     <link rel="icon" type="image/png" href="favicon.png">
     <title>Index</title>
-    <a href="https://www.dinwebbplats.com">
-        <img src="favicon.png" alt="Din Logga">
-    </a>
 </head>
 <body>
     <header>
+        <a href="https://www.dinwebbplats.com">
+            <img src="favicon.png" alt="Din Logga">
+            <style>
+                /* Stilmall för att göra loggan mindre */
+                img {
+                    width: 100px; /* Justera bredden enligt behov */
+                    height: auto; /* Låt höjden skaleras automatiskt */
+                }
+            </style>
+        </a>
         <nav>
             <ul>
                 <li><a href="index.html">Hem</a></li>
@@ -19,6 +26,7 @@
                 <li><a href="om.html">Om</a></li>
             </ul>
         </nav>
+
     </header>
 
     <main>
