--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <header>
-
+        <a href="https://www.dinwebbplats.com">
+            <img src="favicon.png" alt="Din Logga">
+            <style>
+                /* Stilmall för att göra loggan mindre */
+                img {
+                    width: 50px; /* Justera bredden enligt behov */
+                    height: auto; /* Låt höjden skaleras automatiskt */
+                }
+            </style>
+        </a>
         <nav>
             <ul>
-                <li>        <a href="index.html">
-                    <img src="favicon.png" alt="Din Logga">
-                    <style>
-                        /* Stilmall för att göra loggan mindre */
-                        img {
-                            width: 100px; /* Justera bredden enligt behov */
-                            height: auto; /* Låt höjden skaleras automatiskt */
-                        }
-                    </style>
-                </a></li>
+                <li><a href="index.html">Hem</a></li>
                 <li><a href="services.html">Tjänster</a></li>
                 <li><a href="om.html">Om</a></li>
             </ul>
