--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <style>
                 /* Stilmall för att göra loggan mindre */
                 img {
-                    width: 50px; /* Justera bredden enligt behov */
+                    width: auto; /* Justera bredden enligt behov */
                     height: auto; /* Låt höjden skaleras automatiskt */
                 }
             </style>
