--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
     </header>
 
     <main>
-        <h1>Välkommen till vår hemsida</h1>
-        <p>Här kan du hitta information om våra tjänster.</p>
+        <h1>Välkommen till min test-hemsida</h1>
+        <h2>Klicka runt vetja</h2>
+        <p>Här testar jag olika funktioner.</p>
 <script src="hemsida.js"></script>
     </body>
 <div id="orderDisplay" class="order-container">
@@ -48,13 +49,13 @@
 
 <script src="hemsida.js"></script>
   
-<a href="services.html" class="btn">Våra Tjänster</a>
+<a href="services.html" class="btn">Tjänster</a>
         <a href="om.html" class="btn">Om</a>
         <a href="index.html" class="btn">Hem</a>
     </main>
 
     <footer>
-        <p>&copy; 2023 Albin Holmqivst
+        <p>&copy; 2023 Albin Holmqvist
 
         </p>
     </footer>
