--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a href="https://www.dinwebbplats.com">
-            <img src="favicon.png" alt="Din Logga">
+            <img src="favicon.png" id="logo">
         </a>
         <nav>
             <ul>
