--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <a href="https://www.dinwebbplats.com">
-            <img src="favicon.png" id="logo">
+        <a href="https://www.dinwebbplats.com" id="logo">
+            <img src="favicon.png" alt="Logga">
         </a>
         <nav>
             <ul>
