--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="https://www.dinwebbplats.com" id="logo">
+        <a href="https://albinholmqvist.github.io/site/om.html" id="logo">
             <img src="favicon.png" alt="Logga">
         </a>
         <nav>
