--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </a>
         <nav>
             <ul>
-                <li><a href="index.html">Hems</a></li>
+                <li><a href="index.html">Hem</a></li>
                 <li><a href="services.html">Tjänster</a></li>
                 <li><a href="om.html">Om</a></li>
             </ul>
