--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <div id="orderResult" class="order-container">
             <!-- Resultat visas här -->
         </div>
+        <input type="text" id="descriptionInput" placeholder="Beskrivning">
+        <textarea id="descriptionInput" placeholder="Beskrivning" rows="4"></textarea>
+
 
         <div id="csvData"></div>
 
