--- a/ordrar.html
+++ b/ordrar.html
@@ -3,20 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="hemsida.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="favicon.png">
-    <title>Ordrar</title>
+    <title>
+      Ordrar
+    </title>
 </head>
 <body>
     <header>
-        <a href="https://albinholmqvist.github.io/site/om.html" id="logo">
+        <a href="https://albinholmqvist.github.io/site/index.html" id="logo">
             <img src="favicon.png" alt="Logga">
         </a>
         <nav>
             <ul>
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="services.html">Tjänster</a></li>
-                <li><a href="om.html">Om</a></li>
+                <li><a href="index.html">
+                  Hem
+                </a></li>
+                <li><a href="services.html">
+                  Tjänster
+                </a></li>
+                <li><a href="om.html">
+                  Om
+                </a></li>
             </ul>
         </nav>
     </header>
@@ -33,5 +41,6 @@
 
         <div id="csvData"></div>
         <script src="hemsida.js"></script>
-    </body>
-    </html>
+    <button>Knappen</button>
+</body>
+</html>
