--- a/ordrar.html
+++ b/ordrar.html
@@ -41,6 +41,8 @@
 
         <div id="csvData"></div>
         <script src="hemsida.js"></script>
-    <button>Knappen</button>
+    <button class="test">
+      Knappen
+    </button>
 </body>
 </html>
