--- a/history.html
+++ b/history.html
@@ -22,7 +22,7 @@
                 <li><a href="services.html">Tjänster</a></li>
                 <li><a href="om.html">Om</a></li>
                 <!-- Lägg till en länk till den nya sidan om återuppföljning -->
-                <li><a href="ateruppfoljning.html">Återuppföljning</a></li>
+                <li><a href="history.html">Återuppföljning</a></li>
             </ul>
         </nav>
     </header>
