--- a/history.html
+++ b/history.html
@@ -19,10 +19,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Hem</a></li>
-                <li><a href="services.html">Tjänster</a></li>
-                <li><a href="om.html">Om</a></li>
-                <!-- Lägg till en länk till den nya sidan om återuppföljning -->
-                <li><a href="history.html">Återuppföljning</a></li>
+                <li><a href="services.html">Ordrar</a></li>
+                <li><a href="ordrar.html">U-Ordrar</a></li>
             </ul>
         </nav>
     </header>
