--- a/ordrar.html
+++ b/ordrar.html
@@ -19,8 +19,8 @@
                 <li><a href="services.html">
                   Tjänster
                 </a></li>
-                <li><a href="om.html">
-                  Om
+                <li><a href="history.html">
+                  Historik
                 </a></li>
             </ul>
         </nav>
