--- a/services.html
+++ b/services.html
@@ -10,8 +10,9 @@
                 <nav>
                     <ul>
                         <li><a href="index.html">Hem</a></li>
-                        <li><a href="services.html">Tjänster</a></li>
-                        <li><a href="om.html">Om</a></li>
+                        <li><a href="history.html">Historik</a></li>
+                        <li><a href="ordrar.html">U-ordrar</a></li>
+                        
                     </ul>
                 </nav>
             </header>
