--- a/hemsida.html
+++ b/hemsida.html
@@ -26,8 +26,9 @@
     </main>
     <nav>
         <ul>
-            <li><a href="index.html">Hem</a></li>
-            <li><a href="om.html">Om Albin</a></li>
+            <li><a href="index.html">Start</a></li>
+            <li><a href="services.html">Ordrar</a></li>
+            <li><a href="ordrar.html"></a>U-Ordrar</li>
 
         </ul>
     </nav>
