--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </a>
         <nav>
             <ul>
-                <li><a href="index.html">Hem</a></li>
+                <li><a href="hemsida.html">Hem</a></li>
                 <li><a href="services.html">Tjänster</a></li>
-                <li><a href="om.html">Om</a></li>
+                <li><a href="history.html">Om</a></li>
             </ul>
         </nav>
     </header>
