--- a/hemsida.html
+++ b/hemsida.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="hemsida.css">
 </head>
 <body>
-    <header class="headertest">
+    <header class="headertest" id="headertest">
         <h1>Välkommen till Albins Värld</h1>
     </header>
     <nav>
