--- a/hemsida.html
+++ b/hemsida.html
@@ -20,15 +20,15 @@
     </nav>
     <main>
         <section class="intro">
-            <h2>Hej! Jag är Albin Holmqvist.</h2>
-            <p>Jag älskar att utforska, lära mig nya saker och skapa magi med kod!</p>
+            <h2>Hej! Jag heter Albin Holmqvist.</h2>
+            <p>Jag testar lite bara!</p>
         </section>
         <section class="fun-facts">
             <h2>Roliga Fakta om Albin</h2>
             <ul>
-                <li>Jag kan skapa fantastiska webbsidor!</li>
-                <li>Jag älskar att lösa pussel.</li>
-                <li>Jag är en kreativ problemlösare.</li>
+                <li>Jag kan..!</li>
+                <li>Jag älskar</li>
+                <li>Jag är en kreativ</li>
             </ul>
         </section>
     </main>
@@ -40,8 +40,8 @@
         </section>
     </main>
 
-    <footer>
-        <p>Följ med på mina äventyr!</p>
+    <footer class="headertest" id="headertest">
+        <p>Detta är grejer de!</p>
     </footer>
 
     <script src="hemsida.js"></script>
