--- a/hemsida.html
+++ b/hemsida.html
@@ -9,15 +9,26 @@
 <body>
     <header class="headertest" id="headertest">
         <h1>Välkommen till Albins Värld</h1>
+        <div id="navbar">
+            <div id="logo">
+                <a href="https://www.dinwebbplats.com">
+                    <img src="favicon.png" alt="Din Logga">
+                </a>
+            </div>
+            <div id="menu-icon">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
+            <nav id="nav-menu">
+                <ul>
+                    <li><a href="index.html">Hem</a></li>
+                    <li><a href="services.html">Tjänster</a></li>
+                    <li><a href="history.html">Historik</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <nav>
-        <ul>
-          <li><a href="index.html">Start</a></li>
-          <li><a href="services.html">Ordrar</a></li>
-          <li><a href="ordrar.html"></a>U-Ordrar</li>
-
-        </ul>
-    </nav>
     <main>
         <section class="intro">
             <h2>Hej! Jag heter Albin Holmqvist.</h2>
