--- a/hemsida.html
+++ b/hemsida.html
@@ -28,7 +28,7 @@
                 </ul>
             </nav>
         </div>
-        <h1>Välkommen till Albins Värld</h1>
+        <h1>Välkommen $user</h1>
     </header>
     <main>
         <section class="intro">
