--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </a>
         <nav>
             <ul>
-                <li><a href="https://tst-fsmobile.kfast.se/UbwtestEster-mobile/serviceorders/assignment/740000/2">Hem</a></li>
+                <li><a href="https://tst-fsmobile.kfast.se/UbwtestEster-mobile/serviceorders/assignment/740000/2">Se order</a></li>
                 <li><a href="services.html">Tjänster</a></li>
                 <li><a href="history.html">Om</a></li>
             </ul>
