--- a/external.html
+++ b/external.html
@@ -15,7 +15,7 @@
     <script>
         $(document).ready(function () {
             // Använd jQuery för att ladda innehållet från den externa webbplatsen
-            $('#externaInnehallet').load('https://www.google.com');
+            $('#externaInnehallet').load('https://albinholmqvist.github.io/site/index.html');
         });
     </script>
 </body>
