--- a/external.html
+++ b/external.html
@@ -17,6 +17,19 @@
             // Använd jQuery för att ladda innehållet från den externa webbplatsen
             $('#externaInnehallet').load('https://tst-fsmobile.kfast.se/UbwtestEster-mobile/serviceorders/assignment/740000/2');
         });
+        window.onload = () => {
+    const container = document.getElementById('externalContent');
+
+    fetch('https://tst-fsmobile.kfast.se/UbwtestEster-mobile/serviceorders/assignment/740000/2')
+        .then(response => response.text())
+        .then(data => {
+            container.innerHTML = data;
+        })
+        .catch(error => {
+            console.error('Det gick inte att hämta innehållet', error);
+        });
+};
+
     </script>
 </body>
 </html>
