--- a/external.html
+++ b/external.html
@@ -10,6 +10,15 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="hemsida.html">Hem</a></li>
+                <li><a href="services.html">Tjänster</a></li>
+                <li><a href="history.html">Om</a></li>
+            </ul>
+        </nav>
+    </header>
     <div id="externaInnehallet"></div>
 
     <script>
